style(vimEditor): fix newLine, if empty, not showing up in chromium

--- a/src/pages/apps/or-tree-notes/or-tree-notes.scss
+++ b/src/pages/apps/or-tree-notes/or-tree-notes.scss
@@ -15,6 +15,7 @@ $caretColor: black;
 $carentWidth: 1.6px;
 $caretSizeWidth: 0.6 * $fontSize;
 $caretSizeHeight: 1.2 * $fontSize;
+$editorLineHeight: 21.4667px;
 
 :root {
   --caret-size-width: #{$caretSizeWidth};
@@ -83,6 +84,7 @@ or-tree-notes {
 
     .editor-line {
       white-space: pre;
+      height: $editorLineHeight;
     }
 
     #caret {
